--- a/data/tasks.json
+++ b/data/tasks.json
@@ -3,11 +3,11 @@
     "id": "9f4705f6-91e5-45e7-9b2c-dcfa112ed453",
     "text_name": "Ежедневные физические активности",
     "text_description": "Отжимания + Пресс\r\nКаждый день + 1",
-    "done": true,
+    "done": false,
     "is_daily": true,
     "completed_count": 37,
-    "streak": 46,
+    "streak": 1,
     "planned_date": null,
-    "last_completed_date": "2026-01-22"
+    "last_completed_date": "2026-02-10"
   }
 ]
